# text-editor-perf

./: CMakeLists.txt  README.md
benchmarks/: bench_insert.cpp  bench_main.cpp
include/: editor_interface.h
src/implementations/: naive_array.cpp  naive_array.h
tests/: correctness_tests.cpp
